[package]
name = "concurrency-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickrs = "0.1.5"
structopt = "0.3.23"
lazy_static = "1.4.0"
regex = "1.9.5"
async-fs = "1.6.0"
futures = "0.3.28"
io = "0.0.2"
nix = { version = "0.27.1", features = ["fs"] }
